welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {

	if(a==b){a = 3*a;}
	return a + b
}
